# fastapi-starter-kit

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
.github/workflows/: pylint.yml
app/: main.py
app/core/: config.py  constants.py  database.py  dependencies.py  exceptions.py  security.py
app/core/logging/: error_middleware.py  logger.py  middleware.py
app/core/middleware/: activity_context.py  cors_middleware.py  exceptions_middleware.py  ip_whitelist_middleware.py  request_time_middleware.py  security_headers_middleware.py  validation_middleware.py
app/core/schemas/: pagination.py  response.py
app/core/services/: email_service.py  email_templates.py  test_data_generator.py
app/db/: base.py
app/modules/activity_logs/: audit_mixin.py  constants.py  request_context.py  serializer.py
app/modules/activity_logs/adapters/: models.py
app/modules/auth/adapters/: blacklist_repository.py  device_repository.py  models.py
app/modules/auth/controllers/: routes.py  schemas.py
app/modules/auth/entities/: entities.py  repositories.py
app/modules/auth/services/: confirm_password_reset.py  logout_user.py  refresh_token.py  register_device.py  reset_password_request.py  user_login.py  verify_user.py
app/modules/notifications/: constants.py
app/modules/notifications/adapters/: models.py
app/modules/notifications/controllers/: routes.py  schemas.py
app/modules/notifications/entities/: entities.py  repositories.py
app/modules/notifications/repositories/: notification_repository.py
app/modules/notifications/services/: list_notifications.py  notification_service.py  sms_service.py  webhook_service.py
app/modules/roles/: constants.py
app/modules/roles/adapters/: models.py  sqlalchemy_repository.py
app/modules/roles/controllers/: routes.py  schemas.py
app/modules/roles/entities/: entities.py  repositories.py
app/modules/users/: constants.py
migrations/: env.py
migrations/versions/: 02babf8da1a9_is_delete_last_login_added.py  14a9ecc70fd1_created_at_and_updated_at_added.py  284ba630ba93_notification_log_added.py  327849dc3186_phone_profile_pic_added_in_user.py  52325f7af236_blacklist_token.py  5380e4420e0f_user_ip_faild_login_is_locker.py  5d78f5251e28_notification_log_added.py  7ce60cd64a03_string_columns_without_length_limits.py  90bd21ec797f_user.py  9dbafb10757e_is_verified_added_in_user.py  a361b3d352e7_activity_model_added.py  bf03bab2e763_notification_models.py  c279d773a06a_activity_model_added.py  c3b6d9965cb9_notification_modules_added.py  d52e0ce6d946_permission_models.py  e6e3554e23af_permission_models.py  e9e9eb0afafc_all_delete_orphan_usermodel.py  ea44de3d02d4_index_removed_from_user_id.py  ef798ded8093_initial_migration.py
tests/: conftest.py  test_main.py
tests/users/: fake_notification_service.py  fake_repository.py  test_create_user.py  test_list_users.py
(+31 files in other folders)
